@@ -75,18 +75,18 @@ public class DamageFunction {
 					Integer.MAX_VALUE, "Special", DamageType.Lightning,
 					DamageMultiplier.BL),
 			new DamageRow(ActiveSkill.EA, Rune.Frost_Arrow, 3.3, true, 0,
-					DamageType.Cold),
+					DamageType.Cold, DamageMultiplier.Augustines),
 			new DamageRow(ActiveSkill.EA, Rune.Frost_Arrow, 3.3, false, 10, 10,
-					"Chill", DamageType.Cold),
+					"Chill", DamageType.Cold, DamageMultiplier.Augustines),
 			new DamageRow(ActiveSkill.EA, Rune.Immolation_Arrow, 3.0, true, 0,
 					DamageType.Fire),
 			new DamageRow(ActiveSkill.EA, Rune.Immolation_Arrow, 3.15, 2.0,
 					true, Integer.MAX_VALUE, 1, 10, "Burning DoT",
-					DamageType.Fire, DamageMultiplier.DoT),
+					DamageType.Fire, DamageMultiplier.DoT, DamageMultiplier.Augustines),
 			new DamageRow(ActiveSkill.EA, Rune.Lightning_Bolts, 3.0, true,
-					Integer.MAX_VALUE, DamageType.Lightning),
+					Integer.MAX_VALUE, DamageType.Lightning, DamageMultiplier.Augustines),
 			new DamageRow(ActiveSkill.EA, Rune.Nether_Tentacles, 3.0, true,
-					Integer.MAX_VALUE, DamageType.Physical),
+					Integer.MAX_VALUE, DamageType.Physical, DamageMultiplier.Augustines),
 
 			new DamageRow(ActiveSkill.IMP, Rune.None, 7.5, true, 0,
 					DamageType.Physical, DamageMultiplier.S6),
